apply plugin: 'java'
apply plugin: 'application'

mainClassName='com.bardsoftware.eclipsito.Launch'

repositories {
    mavenCentral()
    jcenter()
}

dependencies {
    compile 'com.beust:jcommander:1.72'
    compile group: 'com.grack', name: 'nanojson', version: '1.3'
    compile 'com.squareup.okhttp3:okhttp:3.+'
}

sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8
sourceSets {
    main {
        java {
            srcDirs = ['src']
            include '**/*.java'
        }
    }
}

